crates/control-plane-api/src/server/public/graphql/discovers/snapshots/control_plane_api__server__public__graphql__discovers__test__discover_visibility_and_historical_status.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers/test.rs
expression: "[foreign, owner, historical, unauthenticated]"
---
[
  {
    "data": {
      "discover": null
    }
  },
  {
    "data": {
      "discover": {
        "captureName": "aliceCo/existing",
        "dataPlaneName": "ops/dp/public/aws-us-west-2-c1",
        "draftId": "[draft-id]",
        "errors": [],
        "id": "[id]",
        "logs": {
          "edges": [],
          "pageInfo": {
            "endCursor": null,
            "hasNextPage": false
          }
        },
        "status": "QUEUED"
      }
    }
  },
  {
    "data": {
      "discover": {
        "captureName": "aliceCo/existing",
        "dataPlaneName": "ops/dp/public/aws-us-west-2-c1",
        "draftId": "[draft-id]",
        "errors": [],
        "id": "[id]",
        "logs": {
          "edges": [],
          "pageInfo": {
            "endCursor": null,
            "hasNextPage": false
          }
        },
        "status": "SUCCESS"
      }
    }
  },
  {
    "data": null,
    "errors": [
      {
        "locations": [
          {
            "column": 3,
            "line": 3
          }
        ],
        "message": "status: 'The request does not have valid authentication credentials', self: \"This is an authenticated API but the request is missing a required Authorization: Bearer token\"",
        "path": [
          "discover"
        ]
      }
    ]
  }
]
