crates/control-plane-api/src/server/public/graphql/discovers/snapshots/control_plane_api__server__public__graphql__discovers__test__live_capture_submission_and_rejections.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers/test.rs
expression: "serde_json::json!({\n    \"livePlane\": live[\"data\"][\"createDiscover\"][\"dataPlaneName\"],\n    \"stagedPlane\": staged[\"data\"][\"createDiscover\"][\"dataPlaneName\"],\n    \"missing\": missing[\"errors\"][0][\"message\"], \"wrongPlane\":\n    wrong_plane[\"errors\"][0][\"message\"],\n})"
---
{
  "livePlane": "ops/dp/public/aws-us-west-2-c1",
  "missing": "capture not found",
  "stagedPlane": "ops/dp/public/aws-us-west-2-c1",
  "wrongPlane": "data plane differs from the live capture"
}
