crates/control-plane-api/src/server/public/graphql/discovers/snapshots/control_plane_api__server__public__graphql__discovers__test__staged_discover_submission.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers/test.rs
expression: response
---
{
  "data": {
    "createDiscover": {
      "captureName": "aliceCo/new-capture",
      "createdAt": "[ts]",
      "dataPlaneName": "ops/dp/public/aws-us-west-2-c1",
      "draftId": "[draft-id]",
      "errors": [],
      "id": "[id]",
      "status": "QUEUED",
      "updatedAt": "[ts]"
    }
  }
}
